# v1media

./: .gitignore  README.md
Media for test/: 1staudio.m4a  1staudio_transcribed.srt  1staudio_transcribed.txt  2ndvideo_transcribed.srt  2ndvideo_transcribed.txt  3rdvideo_transcribed.srt  3rdvideo_transcribed.txt  4thvideo_transcribed.srt  4thvideo_transcribed.txt
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  whisper_bridge.cpp
android/app/src/main/java/com/v1media/data/: Media3Extractor.kt  ModelManager.kt
android/app/src/main/java/com/v1media/engine/: WhisperEngine.kt
android/app/src/main/java/com/v1media/ui/: MainActivity.kt  MainViewModel.kt
docs/: benchmarks_2026.json
scripts/: benchmark_models.py  pipeline.py  run_benchmark.py  setup_benchmark.sh
